<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="#FFF"
    tools:context=".LoginStepOne">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="9dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/button"
                    android:layout_width="224dp"
                    android:layout_height="44dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="32dp"
                    android:background="@drawable/bg_circle_blue"
                    android:fontFamily="monospace"
                    android:text="@string/login"
                    android:textColor="#fff"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/layoutNip"
                    app:layout_constraintStart_toStartOf="@+id/layoutNip"
                    app:layout_constraintTop_toBottomOf="@+id/checkBox" />

                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/ingat_nip"
                    app:layout_constraintEnd_toEndOf="@+id/layoutPassword"
                    app:layout_constraintTop_toBottomOf="@+id/layoutPassword" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="157dp"
                    android:layout_height="144dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/app_name"
                    app:layout_constraintBottom_toTopOf="@id/textView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/damartana" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:text="@string/masuk_large"
                    android:textAlignment="center"
                    android:textColor="#919090"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView"
                    app:layout_constraintEnd_toEndOf="@+id/imageView"
                    app:layout_constraintStart_toStartOf="@+id/imageView"
                    app:layout_constraintTop_toBottomOf="@+id/imageView" />


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/layoutNip"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView"
                    app:passwordToggleEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edNip"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="32dp"
                        android:layout_marginEnd="24dp"
                        android:drawablePadding="8dp"
                        android:ems="10"
                        android:hint="@string/nip"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:padding="8dp"
                        tools:ignore="UnusedAttribute" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/layoutPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/layoutNip"
                    app:passwordToggleEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edPassword"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="24dp"
                        android:drawablePadding="8dp"
                        android:ems="10"
                        android:hint="@string/password"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"
                        android:padding="8dp" />

                </android.support.design.widget.TextInputLayout>

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

    </android.support.constraint.ConstraintLayout>

</ScrollView>
